# music-gen-lib

./: .batch_implemented  .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  claude.md  pyproject.toml  userprompt.txt
.claude/: settings.json
config/: musicgen.yaml
docs/: COMPREHENSIVE_CODEBASE_REVIEW.md  SFZ_QUICKSTART.md  SFZ_SETUP.md  STEP_PLAN.md  TIDALCYCLES_COMPARISON.md  V3_API.md  V3_EXAMPLES.md  V3_QUICKSTART.md  changelog.md  decisions.md  idea.md  plan.md  research.md
docs/api/: composition.rst  conf.py  config.rst  core.rst  index.rst  io.rst  orchestration.rst  theory.rst
docs/steps/: 01-project-setup-and-infrastructure.md  02-database-schema-and-data-models.md  02-scales-keys.md  02-schema-generation.md  03-ai-note-sequence-models.md  03-authentication-and-authorization.md  03-chord-progressions.md  04-core-api-endpoints---part-1.md  05-core-api-endpoints---part-2.md  06-data-processing-and-business-logic.md  07-cli-redesign.md  07-frontend-scaffolding-and-layout.md  07-musical-forms.md  08-core-ui-components.md  08-midi-generation.md  09-frontend-pages-and-views.md  10-integration-and-api-connection.md  10-musicxml-generation.md  11-testing-and-quality-assurance.md  12-mood-interface.md  12-performance-optimization.md  12-polyphony-support.md  13-global-timeline.md  13-security-hardening.md  13-testing-documentation.md  14-continuous-controllers.md  14-monitoring-logging-and-observability.md  15-ai-composition-interface.md  15-documentation-and-deployment.md  15-tempo-meter-fluidity.md  16-chunking-strategy.md  16-complete-orchestration.md  18-testing-and-quality.md  INDIAN_CLASSICAL_MUSIC_COMPREHENSIVE_RESEARCH_AND_SOLUTIONS.md  INDIAN_CLASSICAL_MUSIC_ISSUES_ANALYSIS.md  README.md  V3_IMPLEMENTATION_PROMPT.md  V4_IMPLEMENTATION_PROMPT.md  V4_REMAINING_TASKS.md  v3-01-sfz-introduction-and-research.md  (+38 more)
docs/steps/completed/: 01-project-setup-core-structures.md  14-audio-export.md  v2-04-gemini-client.md  v2-05-ai-composer.md  v2-08-type-safety.md  v2-10-enhanced-prompts.md  v2-11-quality-validation.md
docs/steps/completed/v1/: 04-voice-leading.md  05-melody-generation.md  06-orchestration.md  09-audio-synthesis.md  11-lilypond-generation.md  17-cli-enhancements.md
docs/steps/completed/v2/: v2-01-configuration-system.md  v2-06-rendering-engine.md  v2-09-schema-fixes.md
docs/steps/completed/v3/: v3-02-sfz-instrument-definition-layer.md  v3-03-sfz-renderer-integration.md  v3-05-music-theory-system-prompt.md  v3-08-midi-generator.md  v3-09-ai-composer-integration.md  v3-11-documentation.md
docs/steps/completed/v4/: v4-05-guitar-articulation-system.md  v4-06-guitar-chord-library.md  v4-09-drum-kit-definitions.md  v4-11-drum-articulation-system.md  v4-12-world-percussion-definitions.md  v4-15-indian-raga-system.md  v4-16-middle-eastern-instruments.md  v4-17-arabic-maqam-system.md  v4-18-east-asian-instruments.md  v4-19-pentatonic-scale-systems.md  v4-20-other-world-instruments.md  v4-21-pattern-mini-notation-parser.md  v4-22-euclidean-rhythm-implementation.md  v4-23-pattern-transformation-functions.md  v4-28-genre-profile-definitions.md  (+1 more)
docs/tutorials/: 01-getting-started.md  02-scales-and-keys.md  03-melody-generation.md  04-orchestration.md  05-exporting-music.md
examples/: basic_melody.py  chord_progressions.py  full_composition.py  generate_5_mp3s.py  mood_examples.py  mood_generation.py  quick_start.py  test_single.py  v3_demo.py
examples/yaml/: indian_classical_bhairavi.yaml  indian_classical_darbari.yaml  indian_classical_yaman.yaml
logs/ai_calls/: .gitignore
output/: .gitignore  indian_classical_temp.yaml
resources/: genre_profiles.yaml  instrument_definitions.yaml  instrument_definitions_world.yaml  scale_definitions.yaml  system_prompt_v3.txt
scripts/: show_prompts.py
src/: step_01.py  step_02.py  step_03.py  step_04.py  step_05.py  step_06.py  step_07.py  step_08.py  step_09.py  step_10.py  step_11.py  step_12.py  step_13.py  step_14.py  step_15.py
src/musicgen/: __init__.py  __main__.py  composer_v3.py  generator.py
src/musicgen/ai/: __init__.py  client.py  composer.py  models.py
src/musicgen/ai_client/: __init__.py  client.py  exceptions.py  prompts.py  tools.py  yaml_prompts.py
src/musicgen/ai_models/: __init__.py  composition.py  notes.py  parts.py  postprocess.py  sections.py
src/musicgen/composer/: __init__.py  sectional.py
src/musicgen/composer_new/: __init__.py  composer.py  presets.py  sectional.py
src/musicgen/composition/: __init__.py  forms.py  melody.py
src/musicgen/config/: __init__.py  defaults.py  moods.py  settings.py
src/musicgen/core/: __init__.py  chord.py  constants.py  note.py
src/musicgen/engine/: __init__.py  composer.py  parser.py
src/musicgen/genres/: __init__.py  profiles.py
src/musicgen/instruments/: __init__.py  drum_articulations.py  drums.py  fretboard.py  guitars.py  midi_map.py  world.py
src/musicgen/io/: __init__.py  audio_synthesizer.py  lilypond_writer.py  midi_writer.py  musicxml_writer.py  soundfont.py
src/musicgen/midi/: __init__.py  generator.py
src/musicgen/orchestration/: __init__.py  definitions.py  ensembles.py  instruments.py  strategies.py
src/musicgen/patterns/: __init__.py  combinators.py  parser.py  transform.py  world_rhythms.py
src/musicgen/renderer/: __init__.py  audio.py  midi.py  renderer.py
src/musicgen/scales/: __init__.py  arabic.py  indian.py  japanese.py  pentatonic.py
src/musicgen/schema/: __init__.py  generator.py  models.py
src/musicgen/sfz/: __init__.py  installation.py  renderer.py
src/musicgen/theory/: __init__.py  keys.py  progressions.py  scales.py  voice_leading.py
src/musicgen/validation/: __init__.py  models.py  orchestration.py  validator.py  voice_leading.py
tests/: __init__.py  conftest.py  test_ai.py  test_ai_models.py  test_chord.py  test_cli.py  test_composer.py  test_config.py  test_gemini_client.py  test_integration.py  test_moods.py  test_note.py  test_renderer.py  test_scales.py  test_schema.py  test_v3.py  test_v4_instruments.py  test_v4_patterns.py  test_v4_scales_genres.py
(+13 files in other folders)
