[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "musicgen"
version = "0.1.0"
description = "A rule-based orchestral music generation library"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "MusicGen Contributors", email = "contributors@musicgen.dev"}
]
keywords = ["music", "composition", "midi", "music-theory", "orchestration"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: MIDI",
    "Topic :: Artistic Software",
]

dependencies = [
    "music21>=9.0",
    "mido>=1.2",
    "pretty-midi>=0.2",
    "numpy>=1.24",
]

[project.optional-dependencies]
# Core development tools (Python 3.10+)
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "sphinx>=5.0",
    "sphinx-rtd-theme>=1.0",
    "myst-parser>=1.0",
]

# Audio synthesis (requires system dependencies: fluidsynth)
audio = [
    "pydub>=0.25.0",
]

# LilyPond/PDF export (requires Python <3.12)
lilypond = [
    "abjad>=3.0",
]

# AI-powered composition (Gemini)
ai = [
    "google-genai>=1.0.0",
]

# All optional dependencies (except lilypond for Python 3.12+)
all = [
    "musicgen[dev,audio,ai]",
]

[project.urls]
Homepage = "https://github.com/musicgen/music-gen-lib"
Documentation = "https://music-gen-lib.readthedocs.io"
Repository = "https://github.com/musicgen/music-gen-lib"

[project.scripts]
musicgen = "musicgen.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
